Managed/Asset/Internal/Generated/AssetNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.Asset.Internal;

internal static partial class AssetNativeGenerated
{
    [DllImport("LunaAssetC", EntryPoint = "luna_asset_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_free_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeString(IntPtr text);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_register_asset_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void RegisterAssetType([MarshalAs(UnmanagedType.LPUTF8Str)] string type, OnLoadAsset onLoadAsset, OnLoadAssetDefaultData onLoadAssetDefaultData, OnSaveAsset onSaveAsset, OnSetAssetData onSetAssetData, OnGetReferredAssets onGetReferredAssets, IntPtr userdata);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAsset(in global::Luna.Runtime.Guid guid, out NativeAssetHandle outAsset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_register_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr RegisterAsset(NativeAssetHandle asset, [MarshalAs(UnmanagedType.LPUTF8Str)] string type);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_new_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr NewAsset([MarshalAs(UnmanagedType.LPUTF8Str)] string path, [MarshalAs(UnmanagedType.LPUTF8Str)] string type, int saveMetaToFile, out NativeAssetHandle outAsset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_load_assets_meta", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr LoadAssetsMeta([MarshalAs(UnmanagedType.LPUTF8Str)] string path, int allowOverwrite);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_load_asset_meta", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr LoadAssetMeta(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_save_asset_meta", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SaveAssetMeta(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_by_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetByPath([MarshalAs(UnmanagedType.LPUTF8Str)] string path, out NativeAssetHandle outAsset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_guid", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void GetAssetGuid(NativeAssetHandle asset, out global::Luna.Runtime.Guid outGuid);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetPath(NativeAssetHandle asset, out IntPtr outPath);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_set_asset_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetAssetPath(NativeAssetHandle asset, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetName(NativeAssetHandle asset, out IntPtr outName);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetType(NativeAssetHandle asset, out IntPtr outType);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_set_asset_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void SetAssetType(NativeAssetHandle asset, [MarshalAs(UnmanagedType.LPUTF8Str)] string type);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_files_count", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetFilesCount(NativeAssetHandle asset, out ulong outCount);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAssetFile(NativeAssetHandle asset, ulong index, out IntPtr outName);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_delete_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DeleteAsset(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_move_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr MoveAsset(NativeAssetHandle asset, [MarshalAs(UnmanagedType.LPUTF8Str)] string newPath);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_copy_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr CopyAsset(NativeAssetHandle asset, [MarshalAs(UnmanagedType.LPUTF8Str)] string newPath, in global::Luna.Runtime.Guid guid, out NativeAssetHandle outAsset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetAssetData(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_set_asset_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetAssetData(NativeAssetHandle asset, IntPtr data);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_load_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr LoadAsset(NativeAssetHandle asset, int forceReload);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_load_asset_default_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr LoadAssetDefaultData(NativeAssetHandle asset, int forceReload);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_asset_state", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint GetAssetState(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_save_asset", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SaveAsset(NativeAssetHandle asset);

    [DllImport("LunaAssetC", EntryPoint = "luna_asset_get_referred_assets", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void GetReferredAssets(NativeAssetHandle asset, IntPtr outAssets, ulong capacity, out ulong outCount);

}
